k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: streaming-poc
  labels:
    name: streaming-poc
